<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/title_from"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Space
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="10" />

        <Spinner
            android:id="@+id/spinner_from"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:entries="@array/spinner_locations_from" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <include
        layout="@layout/horizontal_gray_bar"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/title_to"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Space
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="10" />

        <Spinner
            android:id="@+id/spinner_to"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:entries="@array/spinner_locations_to" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <include
        layout="@layout/horizontal_gray_bar"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_mode"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_JUTC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="10" />

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:text="@string/jutc_string"
                android:textSize="20sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_coaster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="10" />

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:text="@string/coaster_string"
                android:textSize="20sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_taxi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="10" />

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:text="@string/taxi_string"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>